<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key=""
    >

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/pisankus_about_category">

        <ListPreference
            android:key="pisankus_language"
            android:title="@string/pisankus_language_title"
            android:summary="%s"
            android:defaultValue="system"
            android:entries="@array/pisankus_language_names"
            android:entryValues="@array/pisankus_language_values" />

        <Preference
            android:key="pisankus_check_update"
            android:title="@string/pisankus_update_title"
            android:summary="@string/pisankus_update_summary"
            android:icon="@drawable/pk_ic_jar" />

        <Preference
            android:key="pisankus_version_info"
            android:title="@string/pisankus_version_title"
            android:summary="@string/pisankus_version"
            android:icon="@drawable/pk_ic_misc"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_main_categories"
        >

        <Preference
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/pk_ic_video"
            />


        <Preference
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/pk_ic_controls"
            />

        <Preference
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/pk_ic_java"
            />

        <Preference
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/pk_ic_misc"
            />


        <Preference
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
            />
    </PreferenceCategory>

    <SwitchPreference
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        />

    <Preference
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        />
    <Preference
        android:title="@string/preference_ask_for_microphone_title"
        android:summary="@string/preference_ask_for_microphone_description"
        android:key="microphone_permission_request"
        />





</PreferenceScreen>