<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pk_ambient_background"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <TextView
        android:id="@+id/title_textview"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/pisan_skin_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pisan_skin_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textview" />

    <View
        android:id="@+id/view"
        style="@style/ThickDivider"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/pisan_skin_username" />

    <!-- The character sits on its own card, like the desktop launcher's skin page. -->
    <FrameLayout
        android:id="@+id/pisan_skin_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_large"
        android:background="@drawable/pk_card"
        android:padding="@dimen/padding_large"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/pisan_skin_controls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintWidth_percent="0.4">

        <ImageView
            android:id="@+id/pisan_skin_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pisan_skin_title"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/pisan_skin_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_large"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pisan_skin_card"
        app:layout_constraintTop_toTopOf="@+id/pisan_skin_card">

        <RadioGroup
            android:id="@+id/pisan_skin_variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pisan_skin_variant_classic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pisan_skin_variant_classic" />

            <RadioButton
                android:id="@+id/pisan_skin_variant_slim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_large"
                android:text="@string/pisan_skin_variant_slim" />
        </RadioGroup>

        <com.kdt.mcgui.MineButton
            android:id="@+id/pisan_skin_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/pisan_skin_pick" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/pisan_skin_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/pisan_skin_apply" />

        <Button
            android:id="@+id/pisan_skin_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/pisan_skin_reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/pisan_skin_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_large"
        android:gravity="center"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pisan_skin_card"
        app:layout_constraintVertical_bias="0" />
</androidx.constraintlayout.widget.ConstraintLayout>
